# aur-audit

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: aur.rs  cli.rs  config.rs  file_reader.rs  inventory.rs  main.rs  report.rs
src/ai/: lmstudio.rs  mod.rs  ollama.rs  openrouter.rs
